# MemoryManager

./: CMakeLists.txt  README.md
DataStructures/: LICENSE.md  README.md
DataStructures/Include/: LinkedList.h  Queue.h  Stack.h  TestRun.h  Utility.h
DataStructures/Src/LinkedList/: LinkedList.c
DataStructures/Src/Queue/: Queue.c
DataStructures/Src/Stack/: Stack.c
DataStructures/Test/: LinkedListTest.c  QueueTest.c  StackTest.c  TestRun.c  main.c
DataStructures/Util/: Utility.c
Include/: MemoryManager.h  MemoryManagerTest.h
Src/: MemoryManager.c  main.c
Test/: MemoryManagerTest.c
